# university_courses

./: .gitmodules  README.md
bachelors/year1/: .gitignore
bachelors/year1/semestre2/: polish.cpp
bachelors/year1/semestre2/Lab2. Lists/: input.txt  list.cbp  list.cscope_file_list  output.txt  sort.cpp  sort.h
bachelors/year1/semestre2/Lab2. Sorters/: input.txt  main.cpp  output.txt  output_bucket_sort.txt  sorters.cpp  sorters.h  sortings.cbp
bachelors/year1/semestre2/Lab4. Vars/: list.h  ord.txt  variables.cpp  variables.h  vars.cbp  vars.txt
bachelors/year1/semestre2/Lab5. Trie ft. Vars/: bor.cbp  list.cpp  main.cpp  variables.cpp  vars.txt
bachelors/year1/semestre2/lab6/: args.h  executer.cpp  executer.h  lab6.cbp  m.cpp  main.cpp  parser.cpp  program.h  stnlib.cpp  stnlib.h  tools.h
bachelors/year2/: .gitignore
bachelors/year2/ArchECM/1/: LAB1.cpp
bachelors/year2/ArchECM/3/: LAB3.CPP
bachelors/year2/ArchECM/4/: LAB4.CPP
bachelors/year2/ArchECM/5/: LAB5.CPP
bachelors/year2/PhysBasCompEl/: traffic_lights.ms11
bachelors/year3/: .gitignore
bachelors/year3/final/: UZ-API.txt  report.docx  script.py
bachelors/year4/: .gitignore
bachelors/year4/semestre1/functional/HomeWorks/haskell/7/: hhw7.cabal
bachelors/year4/semestre1/functional/HomeWorks/haskell/7/oldsrc/: Main_HPS_hsx2hs.hs  Main_blaze_html.hs  Main_quasi_quotes.hs
bachelors/year4/semestre1/functional/HomeWorks/haskell/7/src/: Main.hs
bachelors/year4/thesis/: plan.txt
masters/year5/: .gitignore
masters/year5/web_development/: API.txt
masters/year6/: .gitignore
(+1611 files in other folders)
